--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,1 @@
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta name="theme-color" content="#d63384"/>
-  <link rel="manifest" href="/manifest.json" />
-  <title>새롬고 커뮤니티</title>
-</head>
-<body>
-  <div id="root"></div>
-</body>
-</html>
+<!DOCTYPE html><html><head><title>Community</title></head><body><div id='root'></div></body></html>
