--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><title>Community</title></head><body><div id='root'></div></body></html>
+<!DOCTYPE html><html><head><title>커뮤니티</title></head><body><div id='root'></div></body></html>
